[FIX] bad scrollbar on upload popup

--- a/templates/base/theme/global.css
+++ b/templates/base/theme/global.css
@@ -614,7 +614,8 @@ li.small-block .fa-stack {
 /* -- Systeme d Upload -- */
 /* ---------------------- */
 #module-user-upload {
-	margin: 0.309em;
+	margin: 0;
+	padding: 0.309em;
 }
 
 .upload-address-bar {
